# Sistema_Distribuido

./: .gitattributes  .gitignore  README.md  docker-compose.yml  init-db.sh  log.txt  start.bat  start.sh
backend/inventoryservice/: .dockerignore  .env  .sqlxrc  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfileexample.txt  inventoryservice-api.json  orders.json  temporal_order_example.json
backend/inventoryservice/.sqlx/: query-081be741d99f79172643025b2f1750874d4a9a5716dc71400425ae64cc071ee5.json  query-0c8f89c6aeefe30eb4b7177fb700fb4a8b7506c535feaa4157e7129649f55a9a.json  query-0e162d22a2a804c18ee059f5ed5ab53b3aac53516c1c02c64c1303f58cc39ca0.json  query-23b23c14756ccdcd8797fa0de47d35b24f0b10a8e8605cac7adf43e47c167b34.json  query-3293d06a81acfb5e62945f117069da26dcf7e824cce41f21577c36472af0a569.json  query-40d116325cd76e6be2430366e72a7520f566fca2304d419403439f2b4bc5c086.json  query-4d65fd76cb69f37af48071634744975a0d449d6de39fac916aacd94ce3b4e199.json  query-56993ef8e0c9e78c958f135347f5253be8f0152bb0a4d9e30916aa64dfd28e84.json  query-725bf59d0e257e77a69f09cc754ff0ead23fb0cc374119af6547747fb3db1952.json  query-a2c6aecbc66e19e1972be72bcc8db9f9839b04459f123f1abe7b6ed467495b41.json  query-b15d69b4259cd7d21c4e71b2a8ab3880c0ab329480fe0118735cecdf68c707ef.json  query-b1662a2bf5ed2335c4c733b90a72269d0368968a00c597dd0c626b06acd8719d.json  query-b5ed96920df0c5039637b507b4da8f6433c1be24973ba3ddcaa1b18cc7a5525d.json  query-b6c50071f98aac7163704067a43f8dfb502f70e7a60577635216d18a2b0e7f37.json  query-c908fe732be3fafd0258efcb24f283e1ed05aecbba460cbaaff7d8e08d799ed2.json  query-ce9165dc77392ced50ad7889b7c4fe965b92bca055b24abee5d877909d7e235e.json  query-ec6f9d1265a73e1ca42f2eba312a1e4ad947cb4f5f724717cda485408346eafe.json  query-ff4561687b6eccb23fbabd9556dcb9fba7b6fb3216f08d2a2114775ad3c3373b.json
backend/inventoryservice/db/: Dockerfile.db  schema.sql
backend/inventoryservice/src/: db.rs  handlers.rs  main.rs  models.rs  order_logic.rs  orders.rs  routes.rs  seed.rs  state.rs  stock_logic.rs  temp_order_logic.rs
backend/productservice/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  composer.json  docker-compose.yml
backend/productservice/app/Models/: Category.php  Product.php
backend/productservice/bootstrap/: app.php
backend/productservice/config/: cors.php
backend/productservice/database/db/: schema.sql
backend/productservice/database/migrations/: 2025_11_24_145826_create_categories_table.php  2025_11_24_145858_create_products_table.php  2025_11_25_152916_add_estado_to_productos_table.php
backend/productservice/db/: Dockerfile  schema.sql
backend/productservice/routes/: api.php
backend/productservice/src/: auth.rs  handlers.rs
db/: Dockerfile.db  temp.json
(+105 files in other folders)
