[package]
name = "inventoryservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
futures = "0.3.30"
http = "1.1.0"
async-trait = "0.1.80"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
secrecy = "0.8.0"
once_cell = "1.19.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = "5.5.3"