[package]
name = "inventory_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "rust_decimal" ] }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
async-trait = "0.1.7"

[dev-dependencies]
reqwest = "0.11"
tower = { version = "0.4", features = ["util"] }
http = "0.2"
